completed styling and markup for contact form, added scroll back to top button in footer, and continued  adjusting layout issues throughout the page

--- a/client/src/PortfolioContainer/ContactMe/ContactMe.css
+++ b/client/src/PortfolioContainer/ContactMe/ContactMe.css
@@ -1,5 +1,5 @@
 .main-container {
-  padding-top: 3rem;
+  padding-top: 6rem;
   border-radius: 10px;
 }
 .contact-form {
