--- a/client/src/PortfolioContainer/Testimonial/Testimonial.css
+++ b/client/src/PortfolioContainer/Testimonial/Testimonial.css
@@ -1,6 +1,6 @@
-.testimonials-container {
+/* .testimonials-container {
   height: 100vh;
-}
+} */
 
 .testimonial-section {
   padding: 5rem 0 5rem;
